SERVER-22175 DBConfig needs to lock mutex whenever accessing _primaryId or _shardingEnabled